# Ascii-Engine-Rust

./: Cargo.toml  README.md
src/: lib.rs  main.rs  renderer.rs  types.rs
src/core/: mod.rs  polygon.rs  triangle.rs  triangulation.rs
src/engine/: mod.rs  renderer.rs  types.rs
src/engine/shapes/: triangle.rs
src/renderer/: mod.rs
src/shapes/: mod.rs  polygon.rs  triangle.rs  triangulation.rs
src/types/: coordinate.rs  mod.rs
